# binance-grid-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LEARNING_PHASE.md  LICENSE  README.md  TODO.md  check_sentiment.py  main.py  main_hybrid.py  pyproject.toml  requirements.txt  run_backtest.py
.github/workflows/: ci.yml
analysis_exports/: .gitkeep
config/: TRADING_PLAYBOOK.md  notifications.py  strategy_config.py
docker/: .env.example  Dockerfile  Dockerfile.scheduler  Dockerfile.telegram  docker-compose.yml  init.sql  scheduler.py  telegram_bot_handler.py
docs/: CLAUDE_ANALYSIS_GUIDE.md
logs/: .gitkeep
src/: __init__.py
src/analysis/: bayesian_weights.py  correlation_matrix.py  divergence_detector.py  metrics_calculator.py  regime_detection.py  signal_analyzer.py  technical_indicators.py  weekly_export.py
src/api/: binance_client.py  http_client.py  paper_client.py
src/backtest/: engine.py
src/core/: bot.py  cohort_manager.py  cohort_orchestrator.py  config.py  cycle_manager.py  hybrid_config.py  hybrid_orchestrator.py  logging_system.py  mode_manager.py  order_manager.py  risk_guard.py  state_manager.py  trading_mode.py
src/data/: database.py  economic_events.py  etf_flows.py  fetcher.py  market_cap.py  market_data.py  memory.py  playbook.py  sentiment.py  social_sentiment.py  token_unlocks.py  trade_pairs.py  watchlist.py  whale_alert.py
src/models/: portfolio.py
src/notifications/: ai_assistant.py  charts.py  claude_assistant.py  telegram_bot.py  telegram_service.py
src/optimization/: __init__.py  ab_testing.py
src/portfolio/: __init__.py  ai_optimizer.py  allocator.py  constraints.py  go_live.py  portfolio_manager.py  profit_engine.py  validation.py
src/portfolio/tiers/: __init__.py  cash_reserve.py  index_holdings.py  trading_tier.py
src/risk/: cvar_sizing.py  stop_loss.py  stop_loss_executor.py
src/scanner/: __init__.py  coin_discovery.py  coin_scanner.py  opportunity.py
src/strategies/: ai_enhanced.py  dynamic_grid.py  grid_strategy.py  portfolio_rebalance.py
src/tasks/: analysis_tasks.py  base.py  cycle_tasks.py  data_tasks.py  hybrid_tasks.py  market_tasks.py  monitoring_tasks.py  portfolio_tasks.py  reporting_tasks.py  retention_tasks.py  system_tasks.py
src/utils/: heartbeat.py  singleton.py  task_lock.py
tests/: __init__.py  conftest.py  test_ab_testing.py  test_bayesian_weights.py  test_binance_fetcher_coverage.py  test_bot_risk_integration.py  test_bot_tick.py  test_cohort_manager.py  test_coin_discovery.py  test_config.py  test_cvar_sizing.py  test_cycle_manager.py  test_data_coverage.py  test_divergence_detector.py  test_dynamic_grid.py  test_economic_abtesting_coverage.py  test_etf_flows.py  test_grid_strategy.py  test_http_client.py  test_hybrid_config.py  test_hybrid_orchestrator.py  test_integration.py  test_market_data.py  test_metrics_calculator.py  test_mixins.py  test_mode_manager.py  test_monitoring_tasks.py  test_notifications_coverage.py  test_paper_client.py  test_phase10_learning.py  test_phase11_portfolio.py  test_phase12_production.py  test_phase6.py  test_portfolio.py  test_pre_testphase_fixes.py  test_regime_detection.py  test_remaining_coverage.py  test_scanner.py  test_scanner_memory_coverage.py  test_sentiment.py  (+11 more)
